# stm32-tinkering

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  link.ld  main.cpp
cmake/: toolchain.cmake
src/: hal.cpp  hal.hpp  link.ld  main.cpp  startup.cpp  syscalls.cpp
